added input service / changed table component / connected user input component and table component via service

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="container">
-  <app-user-input></app-user-input>
-  <app-table></app-table>
+  <header>
+    <app-user-input></app-user-input>
+  </header>
+  <main>
+    <app-table></app-table>
+  </main>
 </div>
