--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,28 +1,21 @@
 <table mat-table [dataSource]="dataSource" class="table mat-elevation-z8">
-  <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-
-  <!-- Position Column -->
   <ng-container matColumnDef="position">
-    <th mat-header-cell *matHeaderCellDef>No.</th>
+    <th mat-header-cell *matHeaderCellDef>batchId</th>
     <td mat-cell *matCellDef="let element">{{ element.position }}</td>
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="name">
-    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <th mat-header-cell *matHeaderCellDef>status</th>
     <td mat-cell *matCellDef="let element">{{ element.name }}</td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="weight">
-    <th mat-header-cell *matHeaderCellDef>Weight</th>
+    <th mat-header-cell *matHeaderCellDef>active messages</th>
     <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
   </ng-container>
 
-  <!-- Symbol Column -->
   <ng-container matColumnDef="symbol">
-    <th mat-header-cell *matHeaderCellDef>Symbol</th>
+    <th mat-header-cell *matHeaderCellDef>error</th>
     <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
   </ng-container>
 
