--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,24 +1,23 @@
 <table mat-table [dataSource]="dataSource" class="table mat-elevation-z8">
-  <ng-container matColumnDef="position">
+  <ng-container matColumnDef="batchId">
     <th mat-header-cell *matHeaderCellDef>batchId</th>
-    <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    <td mat-cell *matCellDef="let dag">{{ dag.batchId }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="name">
+  <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>status</th>
-    <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    <td mat-cell *matCellDef="let dag">{{ dag.status }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="weight">
+  <ng-container matColumnDef="activeMessages">
     <th mat-header-cell *matHeaderCellDef>active messages</th>
-    <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+    <td mat-cell *matCellDef="let dag">{{ dag.weight }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="symbol">
+  <ng-container matColumnDef="error">
     <th mat-header-cell *matHeaderCellDef>error</th>
-    <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+    <td mat-cell *matCellDef="let dag">{{ dag.error }}</td>
   </ng-container>
-
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
