Show status with colo

--- a/src/app/user-input/user-input.component.html
+++ b/src/app/user-input/user-input.component.html
@@ -4,7 +4,7 @@
     <input
       matInput
       placeholder="json"
-      value="Sushi"
+      [value]="jsonData"
       [(ngModel)]="jsonData"
       [ngModelOptions]="{ standalone: true }"
     />
