--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -6,7 +6,26 @@
 
   <ng-container matColumnDef="status">
     <th mat-header-cell *matHeaderCellDef>status</th>
-    <td mat-cell *matCellDef="let dag">{{ dag.status }}</td>
+    <td
+      mat-cell
+      *matCellDef="let dag"
+      [ngStyle]="{
+        color:
+          dag.status === 'Expired'
+            ? 'yellow'
+            : dag.status === 'Error'
+            ? 'red'
+            : dag.status === 'InProgress'
+            ? 'blue'
+            : dag.status === 'Scheduled'
+            ? 'white'
+            : dag.status === 'Success'
+            ? 'green'
+            : 'black'
+      }"
+    >
+      {{ dag.status }}
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="activeMessages">
@@ -18,6 +37,7 @@
     <th mat-header-cell *matHeaderCellDef>error</th>
     <td mat-cell *matCellDef="let dag">{{ dag.error }}</td>
   </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 </table>
