--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -30,7 +30,7 @@
 
   <ng-container matColumnDef="activeMessages">
     <th mat-header-cell *matHeaderCellDef>active messages</th>
-    <td mat-cell *matCellDef="let dag">{{ dag.weight }}</td>
+    <td mat-cell *matCellDef="let dag">{{ dag.activeMessages }}</td>
   </ng-container>
 
   <ng-container matColumnDef="error">
